[package]
name = "ranhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serenity = { version = "*", features = ["native_tls_backend", "model"] }
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }
